# opencall-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/samples/: faq_antibioticos.txt  faq_delivery.txt  faq_descarte.txt  faq_farmacia_popular.txt  faq_generico.txt  faq_medicamentos_controlados.txt  faq_privacidade_dados.txt  faq_recall.txt  faq_receita_digital.txt  faq_trocas_devolucoes.txt  politica_antimicrobianos.txt  politica_atendimento_cdc.txt  politica_cadeia_frio.txt  politica_controlados_lista_a.txt  politica_controlados_lista_b.txt  politica_controlados_lista_c.txt  politica_descarte_reversa.txt  politica_farmacia_popular.txt  politica_farmacovigilancia.txt  politica_generico_intercambialidade.txt  politica_guarda_receitas.txt  politica_manipulacao.txt  politica_privacidade_lgpd.txt  politica_recall.txt  politica_receita_digital.txt  politica_rotulagem_bula.txt  politica_servicos_farmaceuticos.txt  politica_snpgc_escrituracao.txt  politica_trocas.txt  politica_venda_online.txt  transcricao_cobranca_indevida.txt  transcricao_descarte_vencido.txt  transcricao_devolucao_antibiotico.txt  transcricao_duvida_bula.txt  transcricao_farmacia_popular.txt  transcricao_generico_vs_referencia.txt  transcricao_recall_lote.txt  transcricao_receita_controlada_vencida.txt  transcricao_receita_digital.txt  transcricao_troca_medicamento.txt
docs/: execution-plan.md  execution-plan.pt-br.md  requirements.md  requirements.pt-br.md  status.md  test-plan.md  test-plan.pt-br.md
docs/adr/: 001-langgraph-over-chain.md  002-opentelemetry-tracing.md  003-two-track-retrieval.md
eval_reports/: baseline.json  baseline.md
src/opencall_agent/: __init__.py  api.py  cli.py  config.py  llm.py  observability.py  smoke.py  vector.py
tests/: conftest.py
tests/acceptance/: test_us_a1.py  test_us_a2.py  test_us_a3.py  test_us_a4.py  test_us_s1.py  test_us_s2.py  test_us_s3.py  test_us_s4_trace.py  test_us_s5_two_track.py
tests/eval/: gold.jsonl
tests/integration/: test_api.py  (+2 more)
(+16 files in other folders)
