[project]
name = "opencall-agent"
version = "0.1.0"
description = "Agentic RAG for call center (OpenCall) — LangGraph + LiteLLM + Qdrant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.8",
    "litellm>=1.83.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.17.1",
]

[project.scripts]
opencall-smoke = "opencall_agent.smoke:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencall_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
