[project]
name = "opencall-agent"
version = "0.1.0"
description = "Agentic RAG for call center (OpenCall) — LangGraph + LiteLLM + Qdrant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.8",
    "litellm>=1.83.9",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.17.1",
    "typer>=0.23.0",
]

[project.scripts]
opencall = "opencall_agent.cli:app"

[dependency-groups]
dev = [
    "langdetect>=1.0.9",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencall_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires live Qdrant + Ollama services",
    "acceptance: user-story-level end-to-end test",
]
